==> edgeimpulse/firmware-infineon-cy8ckit-062-ble/src/ei_microphone.cpp <==
#include "edge-impulse-sdk/porting/ei_classifier_porting.h"
#include "edge-impulse-sdk/dsp/numpy.hpp"
#include "firmware-sdk/sensor-aq/sensor_aq.h"
#include "ei_device_psoc62.h"
#include "ei_microphone.h"
#include "firmware-sdk/sensor-aq/sensor_aq_none.h"
#include "sensor_aq_mbedtls_hs256.h"
#include "cy_pdl.h"
#include "cyhal.h"
#include "cybsp.h"
#include "cyhal_clock.h"
#include "cyhal_pdmpcm.h"
#include <stdint.h>
#include <stdlib.h>
#define AUDIO_SYS_CLOCK_HZ          24576000u
#define DECIMATION_RATE             64u
#define PDM_CLK     P10_4
#define PDM_DATA    P10_5
#define PDM_DEFAULT_FREQ_HZ (16000UL)
#define MICROPHONE_SETTLE_TIME 300 /* triple this to be safe */
#define TOTAL_BUFFER_SIZE       (32000U)
#define TOTAL_BUFFER_SAMPLES    (TOTAL_BUFFER_SIZE / sizeof(microphone_sample_t))
#define SINGLE_BUFFER_SIZE      (TOTAL_BUFFER_SIZE / 2)
#define SINGLE_BUFFER_SAMPLES   (SINGLE_BUFFER_SIZE / sizeof(microphone_sample_t))

static bool create_header(void)
{
    int ret;
    EiDevicePSoC62* dev = static_cast<EiDevicePSoC62*>(EiDevicePSoC62::get_device());
    EiDeviceMemory* mem = dev->get_memory();
    const char *device_name = dev->get_device_id().c_str();
    const char *device_type = dev->get_device_type().c_str();
    float interval_ms = dev->get_sample_interval_ms();

    sensor_aq_init_mbedtls_hs256_context(&ei_mic_signing_ctx, &ei_mic_hs_ctx, dev->get_sample_hmac_key().c_str());

    sensor_aq_payload_info payload = {
        device_name,
        device_type,
        interval_ms,
        { { "audio", "wav" } }
    };

    ret = sensor_aq_init(&ei_mic_ctx, &payload, NULL, true);
    if (ret != AQ_OK) {
        ei_printf("sensor_aq_init failed (%d)\n", ret);
        return false;
    }

    // then we're gonna find the last byte that is not 0x00 in the CBOR buffer.
    // That should give us the whole header
    size_t end_of_header_ix = 0;
    for (size_t ix = ei_mic_ctx.cbor_buffer.len - 1; ix >= 0; ix--) {
        if (((uint8_t*)ei_mic_ctx.cbor_buffer.ptr)[ix] != 0x0) {
            end_of_header_ix = ix;
            break;
        }
    }

    if (end_of_header_ix == 0) {
        ei_printf("Failed to find end of header\n");
        return false;
    }

    int ref_size = insert_ref(((char*)ei_mic_ctx.cbor_buffer.ptr + end_of_header_ix), end_of_header_ix);

    end_of_header_ix += ref_size;

    // Write to blockdevice
    ret = mem->write_sample_data((uint8_t*)ei_mic_ctx.cbor_buffer.ptr, 0, end_of_header_ix);

    if (ret != (int)end_of_header_ix) {
        ei_printf("Failed to write to header blockdevice (%d)\n", ret);
        return false;
    }

    headerOffset = end_of_header_ix;

    return true;
}

bool ei_microphone_sample_start(void)
{
    EiDevicePSoC62* dev = static_cast<EiDevicePSoC62*>(EiDevicePSoC62::get_device());
    EiDeviceMemory* mem = dev->get_memory();
    cy_rslt_t result;
    uint32_t required_samples, required_bytes;

    ei_printf("Sampling settings:\n");
    ei_printf("\tInterval: %.5f ms.\n", dev->get_sample_interval_ms());
    ei_printf("\tLength: %lu ms.\n", dev->get_sample_length_ms());
    ei_printf("\tName: %s\n", dev->get_sample_label().c_str());
    ei_printf("\tHMAC Key: %s\n", dev->get_sample_hmac_key().c_str());
    ei_printf("\tFile name: %s\n", dev->get_sample_label().c_str());

    required_samples = (uint32_t)((dev->get_sample_length_ms()) / dev->get_sample_interval_ms());

    // Round to even number of samples for word align flash write
    if(required_samples & 1) {
        required_samples++;
    }

    required_bytes = required_samples * sizeof(microphone_sample_t);
    collected_bytes = 0;

    if(required_bytes > mem->get_available_sample_bytes()) {
        ei_printf("ERR: Sample length is too long. Maximum allowed is %lu ms at 16000 Hz.\r\n", 
            ((mem->get_available_sample_bytes() / (16000 * sizeof(microphone_sample_t))) * 1000));
        return false;
    }

    dev->set_state(eiStateErasingFlash);

    // Minimum delay of 2000 ms for daemon
    uint32_t delay_time_ms = ((required_bytes / mem->block_size) + 1) * mem->block_erase_time;
    ei_printf("Starting in %lu ms... (or until all flash was erased)\n", delay_time_ms < 2000 ? 2000 : delay_time_ms);

    if(mem->erase_sample_data(0, required_bytes) != (required_bytes)) {
        return false;
    }

    // if erasing took less than 2 seconds, wait additional time
    if(delay_time_ms < 2000) {
        ei_sleep(2000 - delay_time_ms);
    }

    pdm_configure((uint32_t)(1000.f / dev->get_sample_interval_ms()), ingestion_isr_handler);

    create_header();

    // discard first mic data, because it takes about 100ms for the mic to settle
    cyhal_pdm_pcm_read_async(&pdm_pcm, bufOne, SINGLE_BUFFER_SAMPLES);
    ei_sleep(MICROPHONE_SETTLE_TIME);
    cyhal_pdm_pcm_abort_async(&pdm_pcm);
    // enable PDM async sampling
    cyhal_pdm_pcm_enable_event(&pdm_pcm, CYHAL_PDM_PCM_ASYNC_COMPLETE, CYHAL_ISR_PRIORITY_DEFAULT, true);
    // now start normal data collection
    result = cyhal_pdm_pcm_read_async(&pdm_pcm, bufOne, SINGLE_BUFFER_SAMPLES);
    if(result != CY_RSLT_SUCCESS) {
        ei_printf("ERR: no audio data!\n");
    }

    ei_printf("Sampling...\n");
    pdm_pcm_flag = false;
    dev->set_state(eiStateSampling);

    while (collected_bytes < required_bytes) {
        if(pdm_pcm_flag) {
            pdm_pcm_flag = false;
            ingestion_process(SINGLE_BUFFER_SIZE);
        }
    }

    cyhal_pdm_pcm_abort_async(&pdm_pcm);
    cyhal_pdm_pcm_stop(&pdm_pcm);
    cyhal_pdm_pcm_free(&pdm_pcm);

    // we collect multiply of SINGLE_BUFFER_SAMPLES, if user requested less we have to adjust collected_bytes
    if(collected_bytes > required_bytes) {
        collected_bytes = required_bytes;
    }

    ei_printf("Done sampling, total bytes collected: %lu\n", collected_bytes);
    ei_printf("[1/1] Uploading file to Edge Impulse...\n");
    ei_printf("Not uploading file, not connected to WiFi. Used buffer, from=0, to=%lu.\n", collected_bytes + headerOffset);
    ei_printf("[1/1] Uploading file to Edge Impulse OK (took 0 ms.)\n");
    ei_printf("OK\n");

    return true;
}

bool ei_microphone_inference_start(uint32_t n_samples, float interval_ms)
{
    EiDevicePSoC62* dev = static_cast<EiDevicePSoC62*>(EiDevicePSoC62::get_device());
    cy_rslt_t result;

    inference.buffers[0] = (microphone_sample_t*)ei_malloc(n_samples * sizeof(microphone_sample_t));
    if(inference.buffers[0] == NULL) {
        ei_printf("ERR: Can't allocate 1st buffer (%lu bytes)\n", n_samples * sizeof(microphone_sample_t));
        return false;
    }

    inference.buffers[1] = (microphone_sample_t*)ei_malloc(n_samples * sizeof(microphone_sample_t));
    if(inference.buffers[1] == NULL) {
        ei_printf("ERR: Can't allocate 2nd buffer (%lu bytes)\n", n_samples * sizeof(microphone_sample_t));
        // 1st buffer is alrerady allocated here, so we have to release it
        ei_free(inference.buffers[0]);
        return false;
    }

    inference.buf_select = 0;
    inference.buf_count  = 0;
    inference.n_samples  = n_samples;
    inference.buf_ready  = 0;

    pdm_configure((uint32_t)(1000.0f / dev->get_sample_interval_ms()), inference_isr_handler);
    cyhal_pdm_pcm_enable_event(&pdm_pcm, CYHAL_PDM_PCM_ASYNC_COMPLETE, CYHAL_ISR_PRIORITY_DEFAULT, true);

    result = cyhal_pdm_pcm_read_async(&pdm_pcm, inference.buffers[0], n_samples);
    if(result != CY_RSLT_SUCCESS) {
        ei_printf("ERR: no audio data!\n");
        return false;
    }

    return true;
}

bool ei_microphone_inference_end(void)
{
    cyhal_pdm_pcm_abort_async(&pdm_pcm);
    cyhal_pdm_pcm_stop(&pdm_pcm);
    cyhal_pdm_pcm_free(&pdm_pcm);

    ei_free(inference.buffers[0]);
    ei_free(inference.buffers[1]);

    return true;
}
