==> edgeimpulse/firmware-nordic-thingy53/src/sensors/ei_microphone.cpp <==
#include "ei_microphone.h"
#include "ei_device_thingy53.h"
#include "firmware-sdk/sensor-aq/sensor_aq_none.h"
#include "edge-impulse-sdk/CMSIS/DSP/Include/dsp/support_functions.h"
#include "edge-impulse-sdk/porting/ei_classifier_porting.h"
#include "ble/ble_nus.h"
#include "ble/ei_ble_com.h"
#include "wifi/ei_ws_client.h"
#include <zephyr/audio/dmic.h>
#include <zephyr/logging/log.h>
#include <nrfx_pdm.h>
#include <zephyr/kernel.h>
#include "edge-impulse-sdk/dsp/numpy.hpp"
#define AUDIO_SAMPLING_FREQUENCY        16000
#define AUDIO_SAMPLES_PER_MS            (AUDIO_SAMPLING_FREQUENCY / 1000)
#define AUDIO_DSP_SAMPLE_LENGTH_MS      16
#define AUDIO_DSP_SAMPLE_RESOLUTION     (sizeof(short))
#define AUDIO_DSP_SAMPLE_BUFFER_SIZE    (AUDIO_SAMPLES_PER_MS * AUDIO_DSP_SAMPLE_LENGTH_MS * AUDIO_DSP_SAMPLE_RESOLUTION) //4096
#define PDM_CLK_PIN                     41 // 32+9 = p1.09
#define PDM_DIN_PIN                     27 // 32+6 = p0.27

static bool create_header(sensor_aq_payload_info *payload)
{
    int ret;
    EiDeviceInfo *dev = EiDeviceInfo::get_device();
    EiDeviceMemory* mem = dev->get_memory();
    sensor_aq_init_none_context(&ei_mic_signing_ctx);//sensor_aq_init_mbedtls_hs256_context(&ei_mic_signing_ctx, &ei_mic_hs_ctx, dev->get_sample_hmac_key().c_str());

    ret = sensor_aq_init(&ei_mic_ctx, payload, NULL, true);

    if (ret != AQ_OK) {
        ei_printf("sensor_aq_init failed (%d)\n", ret);
        return false;
    }

    // then we're gonna find the last byte that is not 0x00 in the CBOR buffer.
    // That should give us the whole header
    size_t end_of_header_ix = 0;
    for (size_t ix = ei_mic_ctx.cbor_buffer.len - 1; ix >= 0; ix--) {
        if (((uint8_t *)ei_mic_ctx.cbor_buffer.ptr)[ix] != 0x0) {
            end_of_header_ix = ix;
            break;
        }
    }

    if (end_of_header_ix == 0) {
        ei_printf("Failed to find end of header\n");
        return false;
    }

    int ref_size = insert_ref(((char*)ei_mic_ctx.cbor_buffer.ptr + end_of_header_ix), end_of_header_ix);
    // and update the signature
    ret = ei_mic_ctx.signature_ctx->update(ei_mic_ctx.signature_ctx, (uint8_t*)(ei_mic_ctx.cbor_buffer.ptr + end_of_header_ix), ref_size);
    if (ret != 0) {
        ei_printf("Failed to update signature from header (%d)\n", ret);
        return false;
    }
    end_of_header_ix += ref_size;

    // Write to blockdevice
    ret = mem->write_sample_data((uint8_t*)ei_mic_ctx.cbor_buffer.ptr, 0, end_of_header_ix);

    if (ret != end_of_header_ix) {
        ei_printf("Failed to write to header blockdevice (%d)\n", ret);
        return false;
    }

    headerOffset = end_of_header_ix;

    return true;
}

bool ei_microphone_sample_start(void)
{
    EiDeviceThingy53 *dev = static_cast<EiDeviceThingy53*>(EiDeviceInfo::get_device());
    EiDeviceMemory* mem = dev->get_memory();
    uint32_t nrfx_err;
    char * json_string = NULL;
    nrfx_err_t err;
    int ret;
    uint32_t required_samples;
    uint8_t *page_buffer;
    // used for optimizing memory comsumpton
    const char *str_sample_settings = "Sampling settings:";
    const char *str_interval = "\tInterval:";
    const char *str_length = "\tLength:";
    const char *str_name = "\tName:";
    const char *str_hmac_key = "\tHMAC Key:";
    const char *str_file_name = "\tFile name:";
    const char *str_error_mic_init = "Error microphone init";
    const char *str_error_mic_start = "Error microphone srart";
    const char *str_unknown_serial_channel = "Unknown serial channel";
    const char *str_failed_to_finish_signature = "Failed to finish signature";
    const char *str_failed_to_allocate_page = "Failed to allocate a page buffer to write the hash";
    const char *failed_to_read_first_page = "Failed to read first page";
    const char *failed_to_erase_first_page = "Failed to erase first page";
    const char *failed_to_write_first_page = "Failed to write first page with updated hash";


    sensor_aq_payload_info payload = {
        dev->get_device_id().c_str(),
        dev->get_device_type().c_str(),
        dev->get_sample_interval_ms(),
        { { "audio", "wav" } }
    };

    if(dev->get_serial_channel() == BLE) {
        LOG_INF("%s", str_sample_settings);
        LOG_INF("%s %.5f ms.", str_interval, dev->get_sample_interval_ms());
        LOG_INF("%s %lu ms.", str_length, dev->get_sample_length_ms());
        LOG_INF("%s %s", str_name, dev->get_sample_label().c_str());
        LOG_INF("%s %s", str_hmac_key, dev->get_sample_hmac_key().c_str());
        LOG_INF("%s %s", str_file_name, dev->get_sample_label().c_str());
    }
    else if(dev->get_serial_channel() == UART) {
        ei_printf("%s\n", str_sample_settings);
        ei_printf("%s %.5f ms.\n", str_interval, dev->get_sample_interval_ms());
        ei_printf("%s %lu ms.\n", str_length, dev->get_sample_length_ms());
        ei_printf("%s %s\n", str_name, dev->get_sample_label().c_str());
        ei_printf("%s %s\n", str_hmac_key, dev->get_sample_hmac_key().c_str());
        ei_printf("%s %s\n", str_file_name, dev->get_sample_label().c_str());
    }
#ifdef CONFIG_WIFI_NRF700X
    else if(dev->get_serial_channel() == WIFI) {
        LOG_INF("%s", str_sample_settings);
        LOG_INF("%s %.5f ms.", str_interval, dev->get_sample_interval_ms());
        LOG_INF("%s %lu ms.", str_length, dev->get_sample_length_ms());
        LOG_INF("%s %s", str_name, dev->get_sample_label().c_str());
        LOG_INF("%s %s", str_hmac_key, dev->get_sample_hmac_key().c_str());
        LOG_INF("%s %s", str_file_name, dev->get_sample_label().c_str());
        LOG_DBG("WiFi COM: Sample request responce...");
        if(ei_ws_get_connection_status()) {
            ei_ws_send_msg(TxMsgType::SampleStartMsg);
        }
    }
#endif
    else {
        LOG_ERR("%s", str_unknown_serial_channel);
    }

    required_samples = (uint32_t)((dev->get_sample_length_ms()) / dev->get_sample_interval_ms());

    /* Round to even number of samples for word align flash write */
    if(required_samples & 1) {
        required_samples++;
    }

    required_samples_size = required_samples * sizeof(microphone_sample_t);
    current_sample = 0;

    // Minimum delay of 2000 ms for daemon
    uint32_t delay_time_ms = ((required_samples_size / mem->block_size) + 1) * mem->block_erase_time;
    if(dev->get_serial_channel() == UART) {
        ei_printf("Starting in %lu ms... (or until all flash was erased)\n", delay_time_ms < 2000 ? 2000 : delay_time_ms);
    }
#ifdef CONFIG_WIFI_NRF700X
    else if(dev->get_serial_channel() == WIFI) {
        LOG_INF("Starting in %lu ms... (or until all flash was erased)\n", delay_time_ms < 2000 ? 2000 : delay_time_ms);
    }
#endif
    else {
        LOG_ERR("%s", str_unknown_serial_channel);
    }


    dev->set_state(eiStateErasingFlash);

    // enable mic driver
    nrfx_pdm_uninit();
    if(!setup_nrf_pdm(ingestion_samples_callback)) {
        LOG_ERR("%s", str_error_mic_init);

        ei_printf("%s\n", str_error_mic_init);
        return false;
    }

    // start sampling now to fix the issue with initial 'click noise'
    err = nrfx_pdm_start();
    if(err != NRFX_SUCCESS){
        if(dev->get_serial_channel() == BLE) {
            LOG_ERR("%s", str_error_mic_start);
        }
        else if(dev->get_serial_channel() == UART) {
            ei_printf("%s\n", str_error_mic_start);
        }
        else if(dev->get_serial_channel() == WIFI) {
            LOG_ERR("%s\n", str_error_mic_start);
        }
        else {
            LOG_ERR("%s", str_unknown_serial_channel);
        }
        return false;
    }

    if(mem->erase_sample_data(0, required_samples_size) != (required_samples_size)) {
        LOG_ERR("Failed to erase memory (required %d B)", required_samples_size);
        //return false;
    }

    // if erasing took less than 2 seconds, wait additional time
    if(delay_time_ms < 2000) {
        ei_sleep(2000 - delay_time_ms);
    }

    /* create and write header into memory */
    if (create_header(&payload) == false) {
        return false;
    }

    if(dev->get_serial_channel() == BLE) {
        char *json_string;
        LOG_INF("Sampling...");
        /*send responce: sampleStarted true*/
        json_string = ei_ble_com_response_sample("sampleStarted", true, NULL);
        ble_nus_send_data((uint8_t*)json_string, strlen((const char *)json_string));
        // cJSON_FreeString(json_string);
        k_free(json_string);
    }
    else if(dev->get_serial_channel() == UART) {
        LOG_DBG("UART COM: Sampling...");
        ei_printf("Sampling...\n");
    }
#ifdef CONFIG_WIFI_NRF700X
    else if(dev->get_serial_channel() == WIFI) {
        LOG_DBG("WiFi COM: Sampling...");
        if(ei_ws_get_connection_status()) {
            ei_ws_send_msg(TxMsgType::SampleStartedMsg);
        }
    }
#endif
    else {
        LOG_ERR("%s", str_unknown_serial_channel);
        return false;
    }

    dev->set_state(eiStateSampling);

    while (current_sample < required_samples_size) {
        k_sem_take(&data_ready, K_FOREVER);
        ingestion_samples_process();
    };

    nrfx_err = nrfx_pdm_stop();
    if(nrfx_err != NRFX_SUCCESS) {
        ei_printf("ERR: PDM Could not stop PDM sampling, error = %d", nrfx_err);
    }

    ret = ei_mic_ctx.signature_ctx->finish(ei_mic_ctx.signature_ctx, ei_mic_ctx.hash_buffer.buffer);
    if (ret != 0) {
        if(dev->get_serial_channel() == BLE) {
            LOG_ERR("%s (%d)", str_failed_to_finish_signature, ret);
        }
        else if(dev->get_serial_channel() == UART) {
            ei_printf("%s (%d)\n", str_failed_to_finish_signature, ret);
        }
#ifdef CONFIG_WIFI_NRF700X
        else if(dev->get_serial_channel() == WIFI) {
            LOG_ERR("%s (%d)\n", str_failed_to_finish_signature, ret);
        }
#endif
        else {
            LOG_ERR("%s", str_unknown_serial_channel);
        }
        return false;
    }

    // load the first page in flash...
    page_buffer = (uint8_t*)ei_malloc(mem->block_size);
    if (!page_buffer) {
        if(dev->get_serial_channel() == BLE) {
            LOG_ERR("%s\n", str_failed_to_allocate_page);
        }
        else if(dev->get_serial_channel() == UART) {
            ei_printf("%s\n", str_failed_to_allocate_page);
        }
#ifdef CONFIG_WIFI_NRF700X
        else if(dev->get_serial_channel() == WIFI) {
            LOG_ERR("%s\n", str_failed_to_allocate_page);
        }
#endif
        else {
            LOG_ERR("%s", str_unknown_serial_channel);
        }
        ei_free(page_buffer);
        return false;
    }

    ret = mem->read_sample_data(page_buffer, 0, mem->block_size);
    if (ret != mem->block_size) {
        if(dev->get_serial_channel() == BLE) {
            LOG_ERR("%s (read %d, requersted %d)\n", failed_to_read_first_page, ret, mem->block_size);
        }
        else if(dev->get_serial_channel() == UART) {
            ei_printf("%s (read %d, requersted %d)\n", failed_to_read_first_page, ret, mem->block_size);
        }
#ifdef CONFIG_WIFI_NRF700X
        else if(dev->get_serial_channel() == WIFI) {
            LOG_ERR("%s (read %d, requersted %d)\n", failed_to_read_first_page, ret, mem->block_size);
        }
#endif
        else {
            LOG_ERR("%s", str_unknown_serial_channel);
        }
        ei_free(page_buffer);
        return false;
    }

    // update the hash
    uint8_t *hash = ei_mic_ctx.hash_buffer.buffer;
    // we have allocated twice as much for this data (because we also want to be able to represent in hex)
    // thus only loop over the first half of the bytes as the signature_ctx has written to those
    for (size_t hash_ix = 0; hash_ix < ei_mic_ctx.hash_buffer.size / 2; hash_ix++) {
        // this might seem convoluted, but snprintf() with %02x is not always supported e.g. by newlib-nano
        // we encode as hex... first ASCII char encodes top 4 bytes
        uint8_t first = (hash[hash_ix] >> 4) & 0xf;
        // second encodes lower 4 bytes
        uint8_t second = hash[hash_ix] & 0xf;

        // if 0..9 -> '0' (48) + value, if >10, then use 'a' (97) - 10 + value
        char first_c = first >= 10 ? 87 + first : 48 + first;
        char second_c = second >= 10 ? 87 + second : 48 + second;

        page_buffer[ei_mic_ctx.signature_index + (hash_ix * 2) + 0] = first_c;
        page_buffer[ei_mic_ctx.signature_index + (hash_ix * 2) + 1] = second_c;
    }

    ret = mem->erase_sample_data(0, mem->block_size);
    if (ret != mem->block_size) {
        if(dev->get_serial_channel() == BLE) {
            LOG_ERR("%s (read %d, requested %d)", failed_to_erase_first_page,ret, mem->block_size);
        }
        else if(dev->get_serial_channel() == UART){
            ei_printf("%s (read %d, requested %d)\n", failed_to_erase_first_page, ret, mem->block_size);
        }
#ifdef CONFIG_WIFI_NRF700X
        else if(dev->get_serial_channel() == WIFI){
            LOG_ERR("%s (read %d, requested %d)\n", failed_to_erase_first_page, ret, mem->block_size);
        }
#endif
        else {
            LOG_ERR("%s", str_unknown_serial_channel);
        }
        free(page_buffer);
        return false;
    }

    ret = mem->write_sample_data(page_buffer, 0, mem->block_size);
    free(page_buffer);
    if (ret != mem->block_size) {
        if(dev->get_serial_channel() == BLE) {
            LOG_ERR("%s (read %d, requested %d)", failed_to_write_first_page, ret, mem->block_size);
        }
        else if(dev->get_serial_channel() == UART) {
            ei_printf("%s (read %d, requested %d)\n", failed_to_write_first_page, ret, mem->block_size);
        }
#ifdef CONFIG_WIFI_NRF700X
        else if(dev->get_serial_channel() == WIFI) {
            LOG_ERR("%s (read %d, requested %d)\n", failed_to_write_first_page, ret, mem->block_size);
        }
#endif
        else {
            LOG_ERR("%s", str_unknown_serial_channel);
        }
        return false;
    }

    uint32_t my_size = required_samples_size + headerOffset;

    if(dev->get_serial_channel() == BLE) {
        LOG_INF("need to upload over BLE");
        /*send responce: sampleUpload true*/
        json_string = ei_ble_com_response_sample("sampleUploading", true, NULL);
        ble_nus_send_data((uint8_t*)json_string, strlen((const char *)json_string));
        // cJSON_FreeString(json_string);
        k_free(json_string);
    }
    else if(dev->get_serial_channel() == UART) {
        ei_printf("Done sampling, total bytes collected: %u\n", required_samples_size);
        ei_printf("[1/1] Uploading file to Edge Impulse...\n");
        ei_printf("Not uploading file, not connected to WiFi. Used buffer, from=%lu, to=%lu.\n", 0, my_size);
        ei_printf("OK\n");
    }
#ifdef CONFIG_WIFI_NRF700X
    else if(dev->get_serial_channel() == WIFI) {
        if(ei_ws_get_connection_status()) {
            LOG_DBG("Used buffer, from=0, to=%u.\n", my_size);
            ei_ws_send_msg(TxMsgType::SampleUploadingMsg);
            ei_ws_send_sample(0, my_size, false);
            ei_ws_send_msg(TxMsgType::SampleFinishedMsg);
        }
        else {
            LOG_ERR("Not uploading file, not connected to WiFi. Used buffer, from=0, to=%u.\n", my_size);
        }
    }
#endif
    return true;
}

bool ei_microphone_inference_start(uint32_t n_samples, float interval_ms)
{
    EiDeviceInfo *dev = EiDeviceInfo::get_device();
    nrfx_err_t err;

    inference.buffers[0] = (int16_t *)ei_malloc(n_samples * sizeof(microphone_sample_t));
    if(inference.buffers[0] == NULL) {
        return false;
    }

    inference.buffers[1] = (int16_t *)ei_malloc(n_samples * sizeof(microphone_sample_t));
    if(inference.buffers[1] == NULL) {
        ei_free(inference.buffers[0]);
        return false;
    }

    inference.buf_select = 0;
    inference.buf_count  = 0;
    inference.n_samples  = n_samples;
    inference.buf_ready  = 0;

    nrfx_pdm_uninit();
    if(!setup_nrf_pdm(inference_samples_callback)) {
        return false;
    }

    err = nrfx_pdm_start();
    if(err != NRFX_SUCCESS){
        return false;
    }

    return true;
}

bool ei_microphone_inference_end(void)
{
    nrfx_err_t err;

    err = nrfx_pdm_stop();
    if(err != NRFX_SUCCESS) {
        ei_printf("ERR: PDM Could not stop PDM sampling, error = %d", err);
    }

    ei_free(inference.buffers[0]);
    ei_free(inference.buffers[1]);
    // ei_free(sample_buffer);

    return true;
}
